--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.7",
